# RootCellar

./: .gitignore  Cargo.toml  README.md  ci-batch-ack-retention-index-fail-route-v1.json  ci-batch-ack-retention-index-missing-v1.json  ci-batch-ack-retention-index-no-routes-v1.json  ci-batch-ack-retention-index-no-routes-v2.json  ci-batch-ack-retention-index-replay-v1.json  ci-batch-ack-retention-index-v1.json  ci-batch-ack-retention-index.json  ci-batch-alert-dispatch-ack-missing-v1.json  ci-batch-alert-dispatch-auth-retry-ack-v1.json  ci-batch-alert-dispatch-auth-retry-corr-v1.json  ci-batch-alert-dispatch-corr-mismatch-v1.json  ci-batch-alert-dispatch-fail-replay-v1.json  ci-batch-alert-dispatch-fail-v1.json  ci-batch-alert-dispatch-local-v1.json  ci-batch-alert-dispatch-missing-v2.json  ci-batch-alert-dispatch-replay-v1.json  ci-batch-alert-dispatch-v1.json  ci-batch-alert-dispatch-v2.json  ci-batch-alert-dispatch-v3.json  ci-batch-alert-dispatch-v4.json  ci-batch-alert-dispatch.json  ci-batch-alert-hook-breach-v1.json  ci-batch-alert-hook-missing-v1.json  ci-batch-alert-hook-missing-v2.json  ci-batch-alert-hook-v1.json  ci-batch-alert-hook-v2.json  ci-batch-alert-hook.json  ci-batch-alert-policy-breach-fail-v1.json  ci-batch-alert-policy-breach-v1.json  ci-batch-alert-policy-missing-v1.json  ci-batch-alert-policy-no-routes-v1.json  ci-batch-alert-policy-pass-v1.json  ci-batch-alert-policy.json  ci-batch-dashboard-adapter-exports-breach-v1.json  ci-batch-dashboard-adapter-exports-breach-v2.json  ci-batch-dashboard-adapter-exports-missing-v1.json  ci-batch-dashboard-adapter-exports-missing-v2.json  (+58 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  script.rs
ci-repro-bundle-v1/: manifest.json  recalc-report.json
crates/rootcellar-cli/: Cargo.toml
crates/rootcellar-cli/src/: main.rs  script.rs
crates/rootcellar-cli/tests/: macro_integration.rs
crates/rootcellar-core/: Cargo.toml
crates/rootcellar-core/src/: calc.rs  interop.rs  lib.rs  model.rs  telemetry.rs
docs/: RootCellar PRD.md
python/: assemble_excel_interop_corpus.py  build_batch_ack_retention_index.py  build_batch_dashboard_pack.py  build_batch_nightly_corpus.py  build_batch_policy_adapters.py  build_batch_trend_snapshot.py  dispatch_batch_alert_hook.py  generate_corpus_fixtures.py  generate_excel_authored_curated_samples.ps1  validate_batch_adapter_contracts.py  validate_batch_dual_read_migration.py  validate_batch_schema_canaries.py  (+3 more)
(+171 files in other folders)
