[workspace]
members = [
  "crates/rootcellar-core",
  "crates/rootcellar-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["RootCellar Contributors"]
rust-version = "1.78"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["serde", "v7"] }
zip = "2.2"
