[package]
name = "rootcellar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
rootcellar-core = { path = "../rootcellar-core" }
