[package]
name = "rootcellar-desktop"
version = "0.1.0"
description = "RootCellar desktop shell"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rootcellar-core = { path = "../../../crates/rootcellar-core" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1.10", features = ["serde", "v7"] }

[package.metadata.tauri-winres]
FileDescription = "RootCellar desktop shell"
ProductName = "RootCellar Desktop"
OriginalFilename = "RootCellar.exe"

[workspace]
